--- a/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
+++ b/bootcamp/vi/solidity/1-Intro/1.1 - Blockchain.md
@@ -33,7 +33,7 @@ Khi giao dịch được gửi tới CN (`Council`) từ các PN, hàm `VRF (Ver
 
 ![kaia PBFT là gì minh hoạ](/bootcamp/vi/solidity/images/kaia-pbft-consensus.png)
 
-## Kai Virtual Machine (KVM)
+## Kaia Virtual Machine (KVM)
 `KVM`, viết tắt của `Kaia Virtual Machine`, là một môi trường máy ảo phi tập trung chạy trên mạng blockchain Kaia. `KVM` cho phép việc thực thi các hợp đồng thông minh, là những chương trình tự động thực hiện các giao dịch hoặc các hành động cụ thể dựa trên các điều kiện đã được mã hóa trước. Hợp đồng thông minh được viết bằng các ngôn ngữ lập trình như Solidity, sau đó được biên dịch thành `bytecode` mà `KVM` có thể hiểu và thực thi. `KVM` tương thích với `EVM` của Ethereum nên hỗ trợ hoàn toàn các công cụ phát triển, `opcode`, và mã nguồn hiện tại.
 
 ## Smart contract là gì?
